[project]
name = "testcontainers-yt-local"
authors = [
    {name = "Dmitriy Fedorov"},
]
requires-python = ">=3.8"
license = {text = "Apache 2.0"}
version = "0.0.1"
dependencies = [
    "testcontainers < 3.8",
    "ytsaurus-client < 0.14",
]

[project.optional-dependencies]
tests = [
    "pytest < 9",
    "requests < 3",
]

[tool.setuptools.packages.find]
where = ["."]
